@@ -8,6 +8,8 @@ DEV
 - *NEW*: Implement outline list numbering (#28)
 - *NEW*: In the three-pane HTML editor layout, use AJAX to load tutorial
   pages
+- *UPDATE*: Use Kajiki as the rendering engine (#49)
+- *UPDATE*: Improve caching of permission lookups (#49)
 
 1.1.1
 -----
